made code more consolidated

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,9 @@
 </div>
 
 <div class="row" id="eighthRow">
-
+  <div class="col card p-3 bg-light match playercon" id="char1"></div>
+  <div class="col card p-3 bg-light match playercon" id="char2"></div>
+  <div class="col card p-3 bg-light match playercon" id="char3"></div>
 </div>
 
 <div class="row" id="ninethRow">
