added attack and defence boxes and values

--- a/src/index.html
+++ b/src/index.html
@@ -4,54 +4,48 @@
     <title>RPG EEE</title>
   </head>
   <body>
-    <div class="container">
 
-<div class="row" id="firstRow">
-  <div class="col card p-3 topbar" id="a0"></div>
+  <div class="container">
 
-</div>
+  <div class="row" id="firstRow">
+  <div class="col card p-3 topbar" id="a0">
+    </div>
+    </div>
 
-<div class="row" id="secondRow">
-  <div class="col card p-3 bg-light monstView" id="enemy"></div>
+  <div class="row" id="secondRow">
+  <div class="col card p-3 bg-light monstView" id="enemy">
+     </div>
+     </div>
 
-</div>
+  <div class="row linebottom" id="thirdRow">
+     </div>
 
-<div class="row linebottom" id="thirdRow">
+  <div class="row" id="fourthRow">
+     </div>
 
-</div>
+  <div class="row" id="fifthRow">
+     </div>
 
-<div class="row" id="fourthRow">
+   <div class="row linebottom" id="sixthRow">
+     </div>
 
-</div>
+  <div class="row" id="seventhRow">
+    <div class="col card p-3 bg-light match player" id="char1"></div>
+    <div class="col card p-3 bg-light match player" id="char2"></div>
+    <div class="col card p-3 bg-light match player" id="char3"></div>
+     </div>
 
-<div class="row" id="fifthRow">
+  <div class="row" id="eighthRow">
+    <div class="col card p-3 bg-light match playercon" id="playercon0"></div>
+    <div class="col card p-3 bg-light match playercon" id="playercon1"></div>
+    <div class="col card p-3 bg-light match playercon" id="playercon2"></div>
+     </div>
 
-</div>
-
-<div class="row linebottom" id="sixthRow">
-
-</div>
-
-<div class="row" id="seventhRow">
-  <div class="col card p-3 bg-light match player" id="char1"></div>
-  <div class="col card p-3 bg-light match player" id="char2"></div>
-  <div class="col card p-3 bg-light match player" id="char3"></div>
-
-
-</div>
-
-<div class="row" id="eighthRow">
-  <div class="col card p-3 bg-light match playercon" id="char1"></div>
-  <div class="col card p-3 bg-light match playercon" id="char2"></div>
-  <div class="col card p-3 bg-light match playercon" id="char3"></div>
-</div>
-
-<div class="row" id="ninethRow">
-
-</div>
-
-
-
+  <div class="row" id="ninethRow">
+    <div class="col card p-3 bg-light match playercon" id="playercon3"></div>
+    <div class="col card p-3 bg-light match playercon" id="playercon4"></div>
+    <div class="col card p-3 bg-light match playercon" id="playercon5"></div>
+     </div>
 
   </div>
   </body>
