--- a/src/index.html
+++ b/src/index.html
@@ -30,9 +30,9 @@
      </div>
 
   <div class="row" id="seventhRow">
-    <div class="col card p-3 bg-light match player" id="char1"></div>
-    <div class="col card p-3 bg-light match player" id="char2"></div>
-    <div class="col card p-3 bg-light match player" id="char3"></div>
+    <div class="col card p-3  match player" id="char1"></div>
+    <div class="col card p-3  match player" id="char2"></div>
+    <div class="col card p-3  match player" id="char3"></div>
      </div>
 
   <div class="row" id="eighthRow">
